Revision history for {{$dist->name}}

{{$NEXT}}

0.76      2014-05-24 08:26:25 -0400
  - migrate to Module::Build
  - update my dists to latest

0.75      2014-05-15 11:53:20 -0400
  - don't install Archive::Libarchive::FFI on MSWin32
  - added Win32::Shortcut::Readlink
  - update my dists to latest

0.74      2014-04-17 07:53:18 -0400
  - update my dists to latest

0.73      2014-04-07 13:25:05 -0400
  - Yars is now required (and supported) on MSWin32
  - update my dists to latest
  - add some of my dists that weren't there yet (e.g. Archive::Libarchive::*)

0.72      2014-02-22 06:34:05 -0500
  - rm AnyEvent::WebSocket::Server

0.71      2014-01-26 21:00:31 -0500
  - rm App::Ack

0.70      2014-01-09 14:02:48 -0500
  - rm Mojolicious::Plugin::RenderFile

0.69      2013-12-30 15:11:31 -0500
  - rm App::cpangitify on MSWin32 only
  - rm WWW::Bugzilla::BugTree on MSWin32 only

0.68      2013-12-28 08:35:40 -0500
  - update my modules to latest
  - include Dist::Zilla plugins

0.67      2013-11-05 12:48:22 -0500
  - update my modules to latest

0.66      2013-10-22 06:56:54 -0400
  - added AnyEvent::WebSocket::Server
  - update modules to latest

0.65      2013-10-16 14:31:12 -0400
  - new versions of my modules

0.64      2013-10-13 05:17:56 -0400
  - rm Tiny::Make
  - update versions to latest

0.63      2013-10-10 16:47:45 -0400
  - new modules added

0.62      2013-10-10 13:49:46 -0400
  - new modules added

0.61      2013-10-06 11:28:43 -0400
  - updated to latest versions of my distros

0.60      2013-09-18 15:48:43 -0400
  - updated to latest versions of my distros
  - added Text::Tabs

0.59      2013-09-12 14:05:59 -0400
  - Sereal::Encoder now seems to build on MSWin32

0.58      2013-09-10 07:16:45 -0400
  - new version of AnyEvent::Open3::Simple (0.72)
  - make EV a runtime prereq (was a testing one)
  - new version of AnyEvent::WebSocket::Client (0.06)

0.57      2013-09-05 16:06:09 -0400
  - new version of Log::Log4perl::Appender::TAP
  - add URI::ws