@@ -91,6 +91,8 @@ DBD::SQLite                                    = 0
 DBI                                            = 0
 Devel::StackTrace                              = 0
 Digest::MD5                                    = 0
+Dist::Zilla::Plugin::Meta::Dynamic::Config     = 0
+Dist::Zilla::Plugin::PPPort                    = 0
 EV                                             = 0
 File::chdir                                    = 0
 File::IgnoreReadonly                           = 0
@@ -102,20 +104,20 @@ JSON                                           = 0
 JSON::XS                                       = 0
 local::lib                                     = 0
 Log::Log4perl                                  = 0
-
-; core, but in separate rpms
+; Module::CoreList is in core, but in separate rpms
 Module::CoreList                               = 0
-
 Module::Which                                  = 0
 Mojo::JSON::Any                                = 0
 Mojolicious                                    = 4.29
 ;Mojolicious::Plugin::RenderFile                = 0
 Mojolicious::Plugin::SslAuth                   = 0
 ;Mojolicious::Plugin::Gravatar                 = 0
+Monkey::Patch                                  = 0
 Moose                                          = 0
 Net::DNS                                       = 0
 Number::Bytes::Human                           = 0
 Perl::Critic                                   = 0
+Pod::Abstract                                  = 0
 
 ; core, but in separate rpms
 Pod::Perldoc                                   = 0
@@ -130,6 +132,7 @@ Sereal::Encoder                                = 0
 String::Template                               = 0
 Template                                       = 0
 Template::Tiny                                 = 0
+Test::CPAN::Changes                            = 0
 Test::Differences                              = 0
 Test::Dir                                      = 0
 Test::EOL                                      = 0
@@ -141,6 +144,7 @@ Test::Pod::Coverage                            = 0
 Test::Pod::Spelling::CommonMistakes            = 0
 Test::Spelling                                 = 0
 Test::Strict                                   = 0
+Test::Vars                                     = 0
 Text::Tabs                                     = 0
 Try::Tiny                                      = 0
 URI                                            = 0
